--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -1,121 +1,223 @@
+/* see the brand guide for colors, fonts, and images in CodePen: 
+https://docs.google.com/document/d/13de5zlWmnox1BbZOiKo1p7tsirkgv0IQLG_bg1R60uE/edit?usp=sharing */
+
 body {
-    background-color: #082B59;
-    margin: 0;
-    padding: 0;
-    font-family: 'Lato', sans-serif;
-    line-height: 2;
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+
+header {
+  background-color: #082B59;
+}
+
+a {
+  color: #F2F2F2;
+  text-decoration: none;
+}
+
+.logo {
+  text-align: center; 
+  padding-bottom: 20px; 
+}
+
+#topnav {
+  padding-bottom: 30px;
+}
+
+#nav-list {
+  display: flex;
+  justify-content: center;
+  gap: 3%;
+  color: #F2F2F2;
+  background-color: #082B59;
+  font-size: 20px;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+#nav-list li a:hover {
+  transition: 0.3s;
+  color: #808080;
+  text-decoration: none;
+}
+
+.border {
+  background-color: #D98555;
+  padding: 5px;
+}
+
+
+main {
+  color: #131D26;
+  padding: 4% 20% 4% 20%;
+  background-color: #F2F2F2;
+  flex-basis: 50%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: row wrap;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 32px;
+  font-weight: bold;
+  color: #131D26;
+}
+
+p {
+  line-height: 2;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  font-size: 16px;
+}
+
+.link {
+  color: #59331D;
+}
+
+.link:hover {
+  transition: 0.3s;
+  color: #808080;
+}
+
+
+.button {
+  padding: 1.2em;
+  margin-top: 2vh;
+  border-radius: 15px;
+  background-color: #59331D;
+  color: #F2F2F2;
+  font-weight: bold;
+  border: none;
+}
+
+.button:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  color: #808080;
+}
+
+
+aside {
+  margin: 2rem 2rem;
+  width: 100%;
+}
+
+.card {
+  border-radius: 20px;
+  background: #59331D;
+  width: 20rem;
+}
+
+#coffee-image-vertical {
+  border-radius: 20px 20px 0px 0px;
+  object-fit: cover;
+  height: 45vh;
+  width: 100%;
+}
+
+.caption {
+  padding: 5% 8% 5% 8%;
+  line-height: 1.5;
+  font-size: 12px;
+  border-radius: 20px 20px 0px 0px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  color: #C4A484;
+  text-decoration: none;
+}
+
+
+
+@media (max-width: 1000px) {
+main {
+  display: flex;
+  flex-direction: row;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+ }
+}
+
+@media (max-width: 992px) {
+  aside {
+    margin:auto;
   }
-  h1, h2, h3 {
-    font-family: 'Poppins', sans-serif;
-  }
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 0;
-  }
-  /* make images flexible */
-  img {
-    max-width: 100%;
-  }
-  a {
-    color: #59331d;
-  }
-  a:hover {
-    text-decoration: none;
-  }
-  header {
-    border-bottom: 10px solid #d98555;
-  }
-  /* navbar styling */
-  nav ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+  main {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
+    text-align: center;
+   }
+  .card {
+    width: 100%;
   }
-  nav li {
-    margin: 0 1rem 1rem 1rem;
-    font-size: 1.3rem;
   }
-  /* max width on the image in pixels */
-  nav .logo img {
-    max-width: 150px;
+
+@media (max-width: 768px) {
+  aside {
+    margin:auto;
   }
-  /* flex basis on the image container, li */
-  nav .logo {
-    flex-basis: 100%;
+  main {
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
     text-align: center;
   }
-  nav a {
-    color: white;
-    text-decoration: none;
-    display: block;
+  .card {
+    width: 100%;
   }
-  nav a:hover {
-    color: #d98555;
+ #nav-list {
+  justify-content: center;
+}
   }
-  /* establishes a white background */
-  .main-bkgd {
-    background: #ffffff url(https://assets.codepen.io/6306176/gulp-bean-bkgd.jpg) repeat-x bottom;
-    padding-bottom: 300px;
+
+@media (max-width: 600px) {
+  aside {
+    margin:auto;
   }
-  /* sits inside of the white background, centered */
-  .main {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 2rem;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+  main {
+  display: flex;
+  flex-direction: column;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 2rem;
   }
-  article {
-    flex-basis: 73%;
-  }
-  figure {
-    margin: 3rem 0 0 0;
-    flex-basis: 25%;
-    background-color: #59331d;
-    border-radius: 10px;
-  }
-  figure img {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-  }
-  figcaption {
-    color: #f2f2f2;
-    padding: 0.5rem;
-  }
-  .button {
-    display: inline-block;
-    background-color: #59331D;
-    border-radius: 10px;
-    padding: 0.5rem 1rem;
-    margin: 0;
-    color: #f2f2f2;
-    text-decoration: none;
-    border: 3px solid #59331d;
-  }
-  .button:hover {
-    background-color: #f2f2f2;
-    color: #59331d;
-  }
-  footer {
-    color: #f2f2f2;
+  .about {
     text-align: center;
-    border-top: 10px solid #d98555;
   }
-  footer ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+  .card {
+    width: 100%;
   }
-  footer a {
-    color: #f2f2f2;
-    font-size: 2rem;
+  #nav-list {
     display: block;
-    margin: 0 1rem 3rem 1rem;
   }
+  #nav-list li {
+    text-align: center;
+    margin-top: 2rem;
+  }
+  #nav-list li:hover {
+    background: #131D26;
+    padding: 1rem;
+    transition: 0.5s;
+    border-radius: 10px;
+  }
+}
+
+/* <!--FOOTER--> */
+.footer {
+  background-color: #122B56;
+  color: #fff;
+  padding: 0.1rem;
+}
+
+.copyright-text {
+  text-align: center;
+  color: #fff;
+  background-color: #122B56;
+}
